--- a/css/estilos.css
+++ b/css/estilos.css
@@ -91,3 +91,26 @@
     grid-column: 6 / 9;
     grid-row: 1/7;
 }
+
+.prueba {
+    width: 10px;
+    height: 10px;
+    position: relative;
+    top: 150px;
+    left: 180px;
+}
+
+.prueba:hover {
+    width: 15px;
+    height: 15px;
+    top: 147.5px;
+    left: 177.5px;
+}
+
+#personaje {
+    width: 10px;
+    height: 20px;
+    background-color: #dc3545;
+    margin-top: 125px;
+    margin-left: 180px;
+}
