--- a/css/estilos.css
+++ b/css/estilos.css
@@ -57,7 +57,9 @@
     background-color: #dc3545;
     border: bisque solid 5px;
 }
-
+.Jugar a{
+    text-decoration: none;
+}
 .icon i {
     margin-top:-7px;
     font-size:6.5em;
