--- a/css/mapa.css
+++ b/css/mapa.css
@@ -1,4 +1,4 @@
-.prueba {
+.prueba1 {
     width: 50px;
     height: 50px;
     position: relative;
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 40px;
     cursor: pointer;
 }
 
@@ -20,8 +20,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
-    cursor: not-allowed;
+    font-size: 40px;
 }
 
 .prueba3 {
@@ -33,8 +32,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
-    cursor: not-allowed;
+    font-size: 40px;
 }
 
 .prueba4 {
@@ -46,8 +44,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
-    cursor: not-allowed;
+    font-size: 40px;
 }
 
 .prueba5 {
@@ -59,8 +56,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
-    cursor: not-allowed;
+    font-size: 40px;
 }
 
 .prueba6 {
@@ -72,8 +68,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
-    cursor: not-allowed;
+    font-size: 40px;
 }
 
 .prueba7 {
@@ -85,16 +80,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
-    cursor: not-allowed;
+    font-size: 40px;
 }
 
-.prueba:hover,
+.prueba1:hover,
 .prueba2:hover,
 .prueba3:hover,
 .prueba4:hover,
 .prueba5:hover,
 .prueba6:hover,
 .prueba7:hover {
-    font-size: 40px;
+    font-size: 60px;
 }
