--- a/css/nombre_jugador.css
+++ b/css/nombre_jugador.css
@@ -1,4 +1,114 @@
 *{
+    margin:0;
+    padding:20px;
+}
+.container{
+    padding: 20px;
+    height: 90vh;
+    width: 80vw;
+    margin-top: 60px;
+    border: 15px;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: 8px black;
+}
+
+.container_inputs{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.container_inputs input[type="text"]{
+    padding-left: 15px;
+    flex: 3;
+    height: 50px;
+}
+.container_inputs input[type="submit"]{
+    flex: 1;
+}
+
+/* Character */
+
+.character{
+    background-image: url('../img/character/character_1.png');
+}
+/* .hi-slide{
+    position: relative;
+    width:754px;
+    height: 292px;
+    margin: 115px auto 0;
+}
+
+.hi-slide .hi-next,
+.hi-slide .hi-prev{
+    position: absolute;
+    top: 50%;
+    width: 40px;
+    height: 40px;
+    margin-top: -20px;
+    border-radius: 50px;
+    line-height: 40px;
+    text-align: center;
+    cursor: pointer;
+    background-color: black;
+    color: white;
+    transition: all 0.7s;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.hi-slide .hi-next:hover,
+.hi-slide .hi-prev:hover{
+    opacity: 1;
+    background-color: darkgoldenrod;
+}
+.hi-slide .hi-prev{
+    left: -70px;
+}
+
+.hi-slide .hi-prev::before{
+    content: '<';
+}
+.hi-slide .hi-next{
+    right:-70px;
+}
+
+.hi-slide .hi-next::before{
+    content: '>';
+}
+
+.hi-slide > ul{
+    list-style: none;
+   position: relative;
+   width: 754px;
+   height: 292px;
+   margin: 0;
+   padding: 0;
+}
+
+.hi-slide > ul > li{
+    overflow: hidden;
+    position: absolute;
+    z-index: 0;
+    left: 377px;
+    top: 147px;
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: 3px solid white;
+    background-color: #333;
+    cursor: pointer;
+}
+
+.hi-slide > ul > li > img{
+    width: 100%;
+     height: 100% ;
+     background-position: center;
+} */
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -56,9 +166,6 @@
     width:300px;
     height:40px;
 }
-
-
-/* Masculino or Femenino */
 label{
     position: relative;
     margin: 5px 0;
@@ -131,4 +238,4 @@ label input:checked ~ .indicator::before{
                 0 0 25px #0f0,
                 0 0 30px #0f0,
                 0 0 40px #0f0;
-}
+} */
