--- a/css/jugando.css
+++ b/css/jugando.css
@@ -45,6 +45,9 @@
 
 .desbloqueo {
     margin: 10px 0.6em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .w3-green,
