--- a/css/mapa.css
+++ b/css/mapa.css
@@ -319,7 +319,7 @@
     align-items: center;
 }
 
-.puntuacion {
+.puntuacionInter {
     border-radius: 0 10px 10px 0;
     padding: 3px;
     background-color: white;
