--- a/css/jugando.css
+++ b/css/jugando.css
@@ -1,8 +1,8 @@
 .header {
     display: flex;
     justify-content: flex-start;
-    margin-top: -2em;
-    padding-left: 16px;
+    margin-top: 0.5em;
+    padding: 8px;
     gap: 0.5em;
 }
 
@@ -16,7 +16,7 @@
 }
 
 .body {
-    /* margin-top: 30px; */
+    margin-top: 30px;
     padding-top: 15px;
     width: 100%;
     height: 70%;
@@ -107,6 +107,8 @@
     transition: color 1500ms ease;
 }
 
+
+
 .personaje {
     flex: 3;
 }
@@ -138,4 +140,3 @@
     background: #C4C4C4;
     cursor: pointer;
 }
-
