--- a/css/mapa.css
+++ b/css/mapa.css
@@ -326,3 +326,23 @@
     border: 5px solid black;
     align-items: center;
 }
+
+.unchained{
+    animation: flotar 2s infinite;
+}
+
+@keyframes flotar {
+    0%{
+        box-shadow:0px 5px 15px 0px rgba(0,0,0,0.6);
+        transform: translateY(0px);
+    }
+    50%{
+        box-shadow:0px 25px 15px 0px rgba(0,0,0,0.2);
+        transform: translateY(-10px);
+    }
+    
+    100%{
+        box-shadow:0px 5px 15px 0px rgba(0,0,0,0.6);
+        transform: translateY(0px);
+    }
+}
