--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,9 +2,12 @@
     padding: 15px;
     max-width: 90vw;
     width: max-content;
-    height: 585px;
+    height: 90vh;
     background-color: rgb(0, 0, 0);
     border-radius: 20px;
+    background: url(../img/mapaspreguntas.jpg);
+    background-size: cover;
+    background-position: center center;
 }
 
 #contenedorjuego {
@@ -12,14 +15,15 @@
     height: 550px;
     float: right;
     float: left;
-    background-color: rgb(144, 243, 243);
-    border-radius: 20px;
+    border-radius: 20px;    
+    
 }
 
 .main {
     margin-top: 15px;
     width: 100%;
     display: flex;
+    
     justify-content: center;
 }
 
