cambio final y al pinchooooooooooooooooo

--- a/css/jugando.css
+++ b/css/jugando.css
@@ -7,6 +7,7 @@
 }
 
 .header div {
+    margin-top: -50px;
     border-radius: 0 20px 20px 0;
     display: flex;
     justify-content: space-between;
@@ -41,6 +42,26 @@
     background: #B67474;
     margin: 0.5px 0.6em;
     border: 0.1px solid darkviolet;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+.window {
+    overflow-y: auto;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(201, 193, 193, 0.096);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-Left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+}
+
+#pregunta {
+    height: max-content;
+    font-size: 1rem;
+    display: flex;
 }
 
 .desbloqueo {
@@ -106,8 +127,6 @@
     transition: background-color 1500ms ease;
     transition: color 1500ms ease;
 }
-
-
 
 .personaje {
     flex: 3;
