--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,16 @@
     height: 90vh;
     background-color: rgb(0, 0, 0);
     border-radius: 20px;
+    background-size: cover;
+    background-position: center center;
+}
+#contenedor1 {
+    padding: 15px;
+    max-width: 90vw;
+    width: max-content;
+    height: 90vh;
+    background-color: rgb(0, 0, 0);
+    border-radius: 20px;
     background: url(../img/mapaspreguntas.jpg);
     background-size: cover;
     background-position: center center;
